--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,1 @@
--i https://pypi.org/simple
-certifi==2021.5.30
-charset-normalizer==2.0.6; python_version >= '3'
-click==8.0.1; python_version >= '3.6'
-colorama==0.4.4; platform_system == 'Windows'
-flask-sqlalchemy==2.5.1
-flask==2.0.1
-greenlet==1.1.1; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
-gunicorn==20.1.0
-idna==3.2; python_version >= '3'
-itsdangerous==2.0.1; python_version >= '3.6'
-jinja2==3.0.1; python_version >= '3.6'
-markupsafe==2.0.1; python_version >= '3.6'
-psycopg2==2.9.1
-python-dotenv==0.19.0
-requests==2.26.0
-sqlalchemy==1.4.25; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-urllib3==1.26.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-werkzeug==2.0.1
+-i https://pypi.org/simplecertifi==2021.5.30charset-normalizer==2.0.6; python_version >= '3'click==8.0.1; python_version >= '3.6'colorama==0.4.4; platform_system == 'Windows'flask-sqlalchemy==2.5.1flask==2.0.1greenlet==1.1.1; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))gunicorn==20.1.0idna==3.2; python_version >= '3'itsdangerous==2.0.1; python_version >= '3.6'jinja2==3.0.1; python_version >= '3.6'markupsafe==2.0.1; python_version >= '3.6'psycopg2==2.9.1python-dotenv==0.19.0requests==2.26.0sqlalchemy==1.4.25; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'urllib3==1.26.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'werkzeug==2.0.1Flask-Session==0.4.0
